tests/valid/trait/method_call_explicit_ufcs_local_annotated_empty_enum_constructor_receiver.facet
enum Job {
  Ready
}

trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted Job {
  fn run(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  let x: unrestricted Job = Job::Ready();
  (<unrestricted Job as Runner>::run x)
}
