tests/invalid/trait/method_generic_bound_mismatch.facet
trait Show;

trait Mapper {
  fn map<T>(self: Self, value: unrestricted T) -> unrestricted T where T: Show;
}

impl Mapper for unrestricted isize {
  fn map<T>(self: Self, value: unrestricted T) -> unrestricted T { value }
}

fn main() -> unrestricted () {
  ()
}
